--- a/app/globals.css
+++ b/app/globals.css
@@ -29,6 +29,24 @@ body {
   overflow-x: hidden;
 }
 
+@media (hover: none) and (pointer: coarse) {
+  input:not([type="checkbox"]):not([type="radio"]):not([type="range"]),
+  textarea,
+  select {
+    font-size: 16px !important;
+  }
+}
+
+.pwa-snappy {
+  -webkit-tap-highlight-color: transparent;
+}
+
+.pwa-snappy a,
+.pwa-snappy button,
+.pwa-snappy [role="button"] {
+  touch-action: manipulation;
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
